# HappyMoustaches

./: README.md  docker-compose.yml
backend/: Cargo.toml  db.sqlite
backend/src/: app.rs  error.rs  main.rs
backend/src/db/: auth.rs  medication.rs  mod.rs  pet.rs  pet_weight.rs  user.rs  vet.rs  vet_visit.rs
backend/src/routes/: auth.rs  mod.rs  pet.rs  protected.rs
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: app.css  hooks.server.ts  sw.ts
frontend/src/lib/: ReloadPrompt.svelte  api.ts  utils.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/api/user/: +server.ts
frontend/src/routes/dashboard/: +page.svelte
frontend/src/routes/login/: +page.svelte  +server.ts
frontend/src/routes/logout/: +page.server.ts  +server.ts
