[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
sea-orm = { version = "0.12.15", features = ["macros", "runtime-async-std-native-tls", "runtime-tokio-native-tls", "sqlx-sqlite"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
