[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-login = "0.15.3"
axum-messages = "0.6.1"
password-auth = "1.0.0"
sea-orm = { version = "0.12.15", features = [
    "macros",
    "runtime-async-std-native-tls",
    "runtime-tokio-native-tls",
    "sqlx-sqlite",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.38.1", features = ["full"] }
tower-cookies = "0.10.0"
tower-http = { version = "0.5.2", features = ["cors"] }
tower-sessions = { version = "0.12.2", features = ["signed"] }
tower-sessions-sqlx-store = { version = "0.12.0", features = ["sqlite"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
